@@ -2,6 +2,8 @@ Changes
 examples/ex1.pl
 examples/ex2.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -17,17 +19,17 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Tags-Output-LibXML/00-use.t
-t/Tags-Output-LibXML/01-version.t
-t/Tags-Output-LibXML/02-pod_coverage.t
-t/Tags-Output-LibXML/03-pod.t
-t/Tags-Output-LibXML/04-new.t
-t/Tags-Output-LibXML/05-comment.t
-t/Tags-Output-LibXML/06-simple_tag.t
-t/Tags-Output-LibXML/07-tag.t
-t/Tags-Output-LibXML/08-preserve_from_attribute.t
-t/Tags-Output-LibXML/09-cdata.t
-t/Tags-Output-LibXML/10-attributes.t
-t/Tags-Output-LibXML/11-instruction.t
-t/Tags-Output-LibXML/12-raw.t
-t/Tags-Output-LibXML/13-data_callback.t
+t/Tags-Output-LibXML/01-use.t
+t/Tags-Output-LibXML/02-version.t
+t/Tags-Output-LibXML/03-new.t
+t/Tags-Output-LibXML/04-comment.t
+t/Tags-Output-LibXML/05-simple_tag.t
+t/Tags-Output-LibXML/06-tag.t
+t/Tags-Output-LibXML/07-preserve_from_attribute.t
+t/Tags-Output-LibXML/08-cdata.t
+t/Tags-Output-LibXML/09-attributes.t
+t/Tags-Output-LibXML/10-instruction.t
+t/Tags-Output-LibXML/11-raw.t
+t/Tags-Output-LibXML/12-data_callback.t
+xt/Tags-Output-LibXML/01-pod_coverage.t
+xt/Tags-Output-LibXML/02-pod.t
