@@ -5,11 +5,8 @@ author:
 build_requires:
   English: 0
   ExtUtils::MakeMaker: 6.36
-  File::Object: 0.01
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -25,6 +22,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Error::Pure: 0.05
   Readonly: 0
