@@ -2,6 +2,7 @@
  - Add LICENSE file.
  - Fix DEPENDENCIES section in doc.
  - Improve SEE ALSO section in doc.
+ - Move author tests to xt/ directory.
 
 0.01 2015-08-24T12:49:41+02:00
  - First version.
